fix spotify spacing

--- a/style.css
+++ b/style.css
@@ -132,7 +132,9 @@ body {
 
 /*SECTION 3*/
 
-#myChart {}
+#spotify {
+    width: 100%;
+}
 
 
 /*FOOTER*/
